split MSSM 2-loop Higgs / threshold contributions
into different libraries

--- a/config/Makefile.customized-betas.in
+++ b/config/Makefile.customized-betas.in
@@ -17,7 +17,7 @@ CONFIGDIR       := $(ABSBASEDIR)/config
 FLEXIDIR        := $(ABSBASEDIR)/src
 FFLITEDIR       := $(ABSBASEDIR)/fflite
 SLHAEADIR       := $(ABSBASEDIR)/slhaea
-MSSMHODIR       := $(ABSBASEDIR)/higher_order/MSSM
+MSSMHODIR       := $(ABSBASEDIR)/higher_order/MSSM_higgs
 SMHODIR         := $(ABSBASEDIR)/higher_order/SM
 
 INCMODEL        := -I$(MODELDIR)
@@ -28,7 +28,7 @@ INCSLHAEA       := -I$(SLHAEADIR)
 LIBMODEL        := $(MODELDIR)/lib$(MODEL)$(MODULE_LIBEXT)
 LIBFLEXI        := $(FLEXIDIR)/libflexisusy$(MODULE_LIBEXT)
 LIBFFLITE       := $(FFLITEDIR)/libfflite$(MODULE_LIBEXT)
-LIBMSSMHO       := $(MSSMHODIR)/libhigher_order_MSSM$(MODULE_LIBEXT)
+LIBMSSMHO       := $(MSSMHODIR)/libhigher_order_MSSM_higgs$(MODULE_LIBEXT)
 LIBSMHO         := $(SMHODIR)/libhigher_order_SM$(MODULE_LIBEXT)
 
 # Variables for compilation
