--- a/config/Makefile.tower.in
+++ b/config/Makefile.tower.in
@@ -19,7 +19,7 @@ CONFIGDIR       := $(ABSBASEDIR)/config
 FLEXIDIR        := $(ABSBASEDIR)/src
 FFLITEDIR       := $(ABSBASEDIR)/fflite
 SLHAEADIR       := $(ABSBASEDIR)/slhaea
-SMHODIR         := $(ABSBASEDIR)/higher_order/SM
+SMHODIR         := $(ABSBASEDIR)/model_specific/SM
 
 INCMODEL1       := -I$(MODEL1DIR)
 INCMODEL2       := -I$(MODEL2DIR)
@@ -31,7 +31,7 @@ LIBMODEL1       := $(MODEL1DIR)/lib$(MODEL1)$(MODULE_LIBEXT)
 LIBMODEL2       := $(MODEL2DIR)/lib$(MODEL2)$(MODULE_LIBEXT)
 LIBFLEXI        := $(FLEXIDIR)/libflexisusy$(MODULE_LIBEXT)
 LIBFFLITE       := $(FFLITEDIR)/libfflite$(MODULE_LIBEXT)
-LIBSMHO         := $(SMHODIR)/libhigher_order_SM$(MODULE_LIBEXT)
+LIBSMHO         := $(SMHODIR)/libmodel_specific_SM$(MODULE_LIBEXT)
 
 # Variables for compilation
 CXX             := @CXX@
