--- a/model_files/NUHMSSMNoFVHimalaya/FlexibleSUSY.m.in
+++ b/model_files/NUHMSSMNoFVHimalaya/FlexibleSUSY.m.in
@@ -121,8 +121,9 @@ ExtraSLHAOutputBlocks = {
             {2, Hold[LowScale]} } },
    {FlexibleSUSYLowEnergy, NoScale,
            {{0, FlexibleSUSYObservable`aMuon},
-            {1, FlexibleSUSYObservable`aMuonGM2Calc},
-            {2, FlexibleSUSYObservable`aMuonGM2CalcUncertainty} } },
+            {1, FlexibleSUSYObservable`aMuonUncertainty},
+            {2, FlexibleSUSYObservable`aMuonGM2Calc},
+            {3, FlexibleSUSYObservable`aMuonGM2CalcUncertainty} } },
    {ALPHA, {{ArcSin[Pole[ZH[2,2]]]}}},
    {HMIX , {{1, \[Mu]},
             {2, vu / vd},
