--- a/model_files/MRSSM2/FlexibleSUSY.m.in
+++ b/model_files/MRSSM2/FlexibleSUSY.m.in
@@ -89,7 +89,13 @@ InitialGuessAtLowScale = {
 
 ExtraSLHAOutputBlocks = {
    {FlexibleSUSYLowEnergy,
-           {{21, FlexibleSUSYObservable`aMuon} } }
+           {{21, FlexibleSUSYObservable`aMuon},
+            {23, FlexibleSUSYObservable`EDM[Fe[1]]},
+            {24, FlexibleSUSYObservable`EDM[Fe[2]]},
+            {25, FlexibleSUSYObservable`EDM[Fe[3]]}, 
+            {26, FlexibleSUSYObservable`MuEGamma[Fe[2]]} 
+           } 
+   }
 };
 
 DefaultPoleMassPrecision = HighPrecision;
