make low-energy matching scale configurable via EXTPAR[100]

--- a/model_files/CMSSMNoFVHimalaya/FlexibleSUSY.m.in
+++ b/model_files/CMSSMNoFVHimalaya/FlexibleSUSY.m.in
@@ -72,6 +72,9 @@ InitialGuessAtHighScale = {
 UseHiggs2LoopMSSM = True;
 EffectiveMu = \[Mu];
 UseMSSM3LoopRGEs = True;
+UseHiggs3LoopMSSM = True;
+UseMSSMYukawa2Loop = True;
+UseMSSMAlphaS2Loop = True;
 
 PotentialLSPParticles = {
     Chi, SveL, SvmL, SvtL, Su, Sd, Sc, Ss, St, Sb,
