--- a/templates/mu_to_egamma.cpp.in
+++ b/templates/mu_to_egamma.cpp.in
@@ -56,9 +56,10 @@ static constexpr double oneOver16PiSquared = 0.0063325739776461107152;
  * dipole moment of a one loop diagram with fields given by
  * \a Args.
  */
-template<class EDMField, class PhotonEmitter, class ExchangeParticle>
+template<class EDMField1, class EDMField2, class PhotonEmitter, class ExchangeParticle>
 struct EDMVertexCorrectionSF {
-   static double value(const typename field_indices<EDMField>::type& indices,
+   static double value(
+         std::array<const typename field_indices<EDMField1>::type&, 2> indices,
                        EvaluationContext& context);
 };
 
@@ -79,9 +80,10 @@ struct EDMVertexCorrectionSF {
 */
 #include <iostream>
 
-template<class EDMField, class PhotonEmitter, class ExchangeParticle>
+template<class EDMField1, class EDMField2, class PhotonEmitter, class ExchangeParticle>
 struct EDMVertexCorrectionFS {
-   static double value(const typename field_indices<EDMField>::type& indices,
+   static double value(
+         std::array<const typename field_indices<EDMField1>::type&, 2> indices,
                        EvaluationContext& context);
 };
 } // anonymous namespace
@@ -168,20 +170,21 @@ double OneLoopFunctionF(double r)
    }
 }
 
-template<class EDMField, class PhotonEmitter, class ExchangeField>
+template<class EDMField1, class EDMField2, class PhotonEmitter, class ExchangeField>
 double EDMVertexCorrectionFS<
-EDMField, PhotonEmitter, ExchangeField
->::value(const typename field_indices<EDMField>::type& indices, EvaluationContext& context)
+EDMField1, EDMField2, PhotonEmitter, ExchangeField
+>::value(std::array<const typename field_indices<EDMField1>::type&, 2> indices, 
+      EvaluationContext& context)
 {
    double res = 0.0;
 
    using FermionVertex1 = Vertex<
-                         typename EDMField::lorentz_conjugate,
+                         typename EDMField1::lorentz_conjugate,
                          ExchangeField,
                          PhotonEmitter
                          >;
    using FermionVertex2 = Vertex<
-                         typename EDMField::lorentz_conjugate,
+                         typename EDMField1::lorentz_conjugate,
                          ExchangeField,
                          PhotonEmitter
                          >;
@@ -191,8 +194,8 @@ EDMField, PhotonEmitter, ExchangeField
    for (const auto& index: indexBounds) {
       const auto edmFieldIndices = FermionVertex1::template fieldIndices<0>(index);
 
-      if (edmFieldIndices == std::array<int, 1> {2} || edmFieldIndices == std::array<int, 1> {1})
-         continue;
+      //if (edmFieldIndices == std::array<int, 1> {2} || edmFieldIndices == std::array<int, 1> {1})
+      //   continue;
 
       const auto photonEmitterIndices = FermionVertex1::template fieldIndices<2>(index);
       const auto exchangeFieldIndices = FermionVertex1::template fieldIndices<1>(index);
@@ -218,15 +221,17 @@ EDMField, PhotonEmitter, ExchangeField
    return res;
 }
 
-template<class EDMField, class PhotonEmitter, class ExchangeField>
+template<class EDMField1, class EDMField2, class PhotonEmitter, class ExchangeField>
 double EDMVertexCorrectionSF<
-EDMField, PhotonEmitter, ExchangeField
->::value(const typename field_indices<EDMField>::type& indices, EvaluationContext& context)
+EDMField1, EDMField2, PhotonEmitter, ExchangeField
+>::value(const typename field_indices<EDMField1>::type& indices_in, 
+      const typename field_indices<EDMField1>::type& indices_out,
+      EvaluationContext& context)
 {
    double res = 0.0;
 
    using FermionVertex = Vertex<
-                         typename EDMField::lorentz_conjugate,
+                         typename EDMField1::lorentz_conjugate,
                          ExchangeField,
                          PhotonEmitter
                          >;
@@ -236,8 +241,8 @@ EDMField, PhotonEmitter, ExchangeField
    for (const auto& index: indexBounds) {
       const auto edmFieldIndices = FermionVertex::template fieldIndices<0>(index);
 
-      if (indices == std::array<int, 1> {2} || indices == std::array<int, 1> {1})
-         continue;
+      //if (indices == std::array<int, 1> {2} || indices == std::array<int, 1> {1})
+      //   continue;
 
       const auto photonEmitterIndices = FermionVertex::template fieldIndices<2>(index);
       const auto exchangeFieldIndices = FermionVertex::template fieldIndices<1>(index);
