--- a/model_files/MSSMEFTHiggs/FlexibleSUSY.m.in
+++ b/model_files/MSSMEFTHiggs/FlexibleSUSY.m.in
@@ -51,9 +51,31 @@ FSAuxiliaryParameterInfo = {
 
 EWSBOutputParameters = { mHd2, mHu2 };
 
-SUSYScale = MSUSY;
+Qmatch = With[
+    { mt = Yu[3,3] vu / Sqrt[2],
+      mQ2 = mq2Input[3,3],
+      mU2 = mu2Input[3,3],
+      Xt = AuInput[3,3] - \[Mu]/(vu/vd)
+    },
+    Simplify @
+    Sqrt[Sqrt[Times @@ Eigenvalues[{{mt^2 + mQ2, mt Xt}, {mt Xt, mt^2 + mU2}}]]]
+];
 
-SUSYScaleFirstGuess = MSUSY;
+QmatchGuess = With[
+    { mt = 160,
+      mQ2 = mq2Input[3,3],
+      mU2 = mu2Input[3,3],
+      Xt = AuInput[3,3] - MuInput/TanBeta
+    },
+    Simplify @
+    Sqrt[Sqrt[Times @@ Eigenvalues[{{mt^2 + mQ2, mt Xt}, {mt Xt, mt^2 + mU2}}]]]
+];
+
+EvalIf[expr_] := Block[{If}, expr];
+
+SUSYScale = EvalIf @ If[MSUSY != 0, MSUSY, Qmatch];
+
+SUSYScaleFirstGuess = EvalIf @ If[MSUSY != 0, MSUSY, QmatchGuess];
 
 SUSYScaleInput = {
     {vu, Sqrt[vu^2 + vd^2] Sin[ArcTan[TanBeta]]},
